# webgpu-hpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch.py
.github/workflows/: build.yml
example/: CMakeLists.txt  main.cpp
glfw3/: CMakeLists.txt
glfw3/include/webgpu/: webgpu-glfw3.hpp
glfw3/src/: webgpu-glfw3.cpp
include/webgpu/: webgpu-glfw3.hpp  webgpu-platform.hpp
