add_library(webgpu-glfw3-hpp src/webgpu-glfw3.cpp)
target_link_libraries(webgpu-glfw3-hpp PRIVATE glfw webgpu-hpp)
target_include_directories(webgpu-glfw3-hpp PUBLIC include)

if (WIN32)
    target_compile_definitions(webgpu-glfw3-hpp PRIVATE -DGLFW_EXPOSE_NATIVE_WIN32)
elseif (UNIX AND NOT APPLE)
    target_compile_definitions(webgpu-glfw3-hpp PRIVATE -DGLFW_EXPOSE_NATIVE_X11)
    target_compile_definitions(webgpu-glfw3-hpp PRIVATE -DGLFW_EXPOSE_NATIVE_WAYLAND)
elseif (APPLE)
    target_compile_definitions(webgpu-glfw3-hpp PRIVATE -DGLFW_EXPOSE_NATIVE_COCOA)
    target_compile_options(webgpu-glfw3-hpp PRIVATE -x objective-c++)
    target_link_libraries(webgpu-glfw3-hpp PRIVATE "-framework CoreFoundation" "-framework QuartzCore")
endif ()